--- a/ProjectRune/ProjectRune/App.xaml
+++ b/ProjectRune/ProjectRune/App.xaml
@@ -4,5 +4,11 @@
              x:Class="project_rune.App">
     <Application.Resources>
 
+        <Color x:Key="DarkBrown">#2D2B24</Color>
+        <Color x:Key="MidBrown">#3E3529</Color>
+        <Color x:Key="LightBrown">#726451</Color>
+
+        <Color x:Key="Active">#7A2920</Color>
+        
     </Application.Resources>
 </Application>
