--- a/ProjectRune/ProjectRune/Pages/SkillsPage.xaml
+++ b/ProjectRune/ProjectRune/Pages/SkillsPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:navigation="clr-namespace:ProjectRune.Views.Navigation" 
+             xmlns:skills="clr-namespace:ProjectRune.Views.Skills" 
              x:Class="ProjectRune.Pages.SkillsPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout BackgroundColor="{StaticResource MidBrown}">
+
+            <navigation:QuickMenu/>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
