--- a/ProjectRune/ProjectRune/Views/SkillDetailsView.xaml
+++ b/ProjectRune/ProjectRune/Views/SkillDetailsView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:skills="clr-namespace:ProjectRune.Views.Skills" 
              x:DataType="skills:SkillDetails"
-             x:Class="ProjectRune.Views.Skills.SkillDetails">
+             x:Class="ProjectRune.Views.SkillDetailsView">
   <ContentView.Content>
       <StackLayout>
           <Label Text="Hello Xamarin.Forms!" />
