--- a/ProjectRune/ProjectRune/App.xaml
+++ b/ProjectRune/ProjectRune/App.xaml
@@ -8,7 +8,12 @@
         <Color x:Key="MidBrown">#3E3529</Color>
         <Color x:Key="LightBrown">#726451</Color>
 
+        <Color x:Key="MidGray">#52524D</Color>
+
         <Color x:Key="Active">#7A2920</Color>
+
+        <Color x:Key="YellowText">#FFFF00</Color>
+        <Color x:Key="BlackBackground">#000001</Color>
         
     </Application.Resources>
 </Application>
