--- a/ProjectRune/ProjectRune/Views/QuickMenuView.xaml
+++ b/ProjectRune/ProjectRune/Views/QuickMenuView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:viewModels="clr-namespace:ProjectRune.ViewModels"
              xmlns:viewModelBase="clr-namespace:ProjectRune.ViewModels.Base"
+             xmlns:services="clr-namespace:ProjectRune.Services"
              x:DataType="viewModels:QuickMenuViewModel"
              x:Class="ProjectRune.Views.QuickMenuView"
              viewModelBase:ViewModelLocator.AutoWireViewModel="True">
@@ -24,16 +25,16 @@
 
             </StackLayout.Resources>
 
-            <Button Command="{Binding SetActiveMenuButton}"
-                    CommandParameter="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Skills}"
+            <Button Command="{Binding SetActiveNavigationSheet}"
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Skills}"
                     ImageSource="Skills">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
                         <Style.Triggers>
                             <DataTrigger TargetType="Button"
-                                         Binding="{Binding ActiveMenuButton}"
-                                         Value="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Skills}">
+                                         Binding="{Binding ActiveNavigationSheet}"
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Skills}">
                                 <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -41,33 +42,16 @@
                 </Button.Style>
             </Button>
 
-            <Button Command="{Binding SetActiveMenuButton}"
-                    CommandParameter="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Inventory}"
+            <Button Command="{Binding SetActiveNavigationSheet}"
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Inventory}"
                     ImageSource="Inventory">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
                         <Style.Triggers>
                             <DataTrigger TargetType="Button"
-                                         Binding="{Binding ActiveMenuButton}"
-                                         Value="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Inventory}">
-                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
-            
-            <Button Command="{Binding SetActiveMenuButton}"
-                    CommandParameter="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Quests}"
-                    ImageSource="Quests">
-                <Button.Style>
-                    <Style TargetType="Button"
-                           BasedOn="{StaticResource MenuItemButton}">
-                        <Style.Triggers>
-                            <DataTrigger TargetType="Button"
-                                         Binding="{Binding ActiveMenuButton}"
-                                         Value="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Quests}">
+                                         Binding="{Binding ActiveNavigationSheet}"
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Inventory}">
                                 <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -75,16 +59,33 @@
                 </Button.Style>
             </Button>
 
-            <Button Command="{Binding SetActiveMenuButton}"
-                    CommandParameter="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Hamburger}"
+            <Button Command="{Binding SetActiveNavigationSheet}"
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Quests}"
+                    ImageSource="Quests">
+                <Button.Style>
+                    <Style TargetType="Button"
+                           BasedOn="{StaticResource MenuItemButton}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="Button"
+                                         Binding="{Binding ActiveNavigationSheet}"
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Quests}">
+                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+            <Button Command="{Binding SetActiveNavigationSheet}"
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.ExtendedMenu}"
                     ImageSource="Hamburger">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
                         <Style.Triggers>
                             <DataTrigger TargetType="Button"
-                                         Binding="{Binding ActiveMenuButton}"
-                                         Value="{x:Static viewModels:QuickMenuViewModel+QuickMenuButtons.Hamburger}">
+                                         Binding="{Binding ActiveNavigationSheet}"
+                                         Value="{x:Static services:NavigationService+NavigationSheet.ExtendedMenu}">
                                 <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
                             </DataTrigger>
                         </Style.Triggers>
