--- a/ProjectRune/ProjectRune/Views/QuickMenuView.xaml
+++ b/ProjectRune/ProjectRune/Views/QuickMenuView.xaml
@@ -13,38 +13,22 @@
         <StackLayout Orientation="Horizontal"
                      Spacing="10"
                      Padding="8"
-                     BackgroundColor="{StaticResource DarkBrown}">
+                     BackgroundColor="{StaticResource DarkPrimary}">
 
             <StackLayout.Resources>
 
                 <Style x:Key="MenuItemButton"
                        TargetType="Button">
                     <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
-                    <Setter Property="BackgroundColor" Value="{StaticResource LightBrown}"/>
+                    <Setter Property="Background" Value="{StaticResource ButtonGradient}"/>
+                    <Setter Property="BackgroundColor" Value="{StaticResource LightActive}"/> <!-- This makes the clicky colour thingy the right colour -->
                 </Style>
 
             </StackLayout.Resources>
 
             <Button Command="{Binding SetActiveNavigationSheet}"
-                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Skills}"
-                    ImageSource="Skills">
-                <Button.Style>
-                    <Style TargetType="Button"
-                           BasedOn="{StaticResource MenuItemButton}">
-                        <Style.Triggers>
-                            <DataTrigger TargetType="Button"
-                                         Binding="{Binding ActiveNavigationSheet}"
-                                         Value="{x:Static services:NavigationService+NavigationSheet.Skills}">
-                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
-
-            <Button Command="{Binding SetActiveNavigationSheet}"
                     CommandParameter="{x:Static services:NavigationService+NavigationSheet.Inventory}"
-                    ImageSource="Inventory">
+                    ImageSource="inventory">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
@@ -52,7 +36,7 @@
                             <DataTrigger TargetType="Button"
                                          Binding="{Binding ActiveNavigationSheet}"
                                          Value="{x:Static services:NavigationService+NavigationSheet.Inventory}">
-                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
+                                <Setter Property="Background" Value="{StaticResource ActiveButtonGradient}"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -60,16 +44,16 @@
             </Button>
 
             <Button Command="{Binding SetActiveNavigationSheet}"
-                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Quests}"
-                    ImageSource="Quests">
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Equipment}"
+                    ImageSource="equipment">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
                         <Style.Triggers>
                             <DataTrigger TargetType="Button"
                                          Binding="{Binding ActiveNavigationSheet}"
-                                         Value="{x:Static services:NavigationService+NavigationSheet.Quests}">
-                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Equipment}">
+                                <Setter Property="Background" Value="{StaticResource ActiveButtonGradient}"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -77,16 +61,33 @@
             </Button>
 
             <Button Command="{Binding SetActiveNavigationSheet}"
-                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.ExtendedMenu}"
-                    ImageSource="Hamburger">
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Index}"
+                    ImageSource="index">
                 <Button.Style>
                     <Style TargetType="Button"
                            BasedOn="{StaticResource MenuItemButton}">
                         <Style.Triggers>
                             <DataTrigger TargetType="Button"
                                          Binding="{Binding ActiveNavigationSheet}"
-                                         Value="{x:Static services:NavigationService+NavigationSheet.ExtendedMenu}">
-                                <Setter Property="BackgroundColor" Value="{StaticResource Active}"/>
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Index}">
+                                <Setter Property="Background" Value="{StaticResource ActiveButtonGradient}"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+            <Button Command="{Binding SetActiveNavigationSheet}"
+                    CommandParameter="{x:Static services:NavigationService+NavigationSheet.Settings}"
+                    ImageSource="settings">
+                <Button.Style>
+                    <Style TargetType="Button"
+                           BasedOn="{StaticResource MenuItemButton}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="Button"
+                                         Binding="{Binding ActiveNavigationSheet}"
+                                         Value="{x:Static services:NavigationService+NavigationSheet.Settings}">
+                                <Setter Property="Background" Value="{StaticResource ActiveButtonGradient}"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
