--- a/ProjectRune/ProjectRune/Pages/MainPage.xaml
+++ b/ProjectRune/ProjectRune/Pages/MainPage.xaml
@@ -5,15 +5,19 @@
              xmlns:views="clr-namespace:ProjectRune.Views"
              x:Class="ProjectRune.Pages.MainPage">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="{StaticResource MidPrimary}"
-                     Spacing="0">
+        <Grid BackgroundColor="{StaticResource MidPrimary}">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
 
             <views:SkillsSummaryView VerticalOptions="Start"/>
 
             <views:InventoryView VerticalOptions="Start"/>
 
-            <views:QuickMenuView VerticalOptions="End"/>
+            <views:QuickMenuView Grid.Row="1"/>
 
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
