--- a/ProjectRune/ProjectRune/Views/SkillsSummaryView.xaml
+++ b/ProjectRune/ProjectRune/Views/SkillsSummaryView.xaml
@@ -29,9 +29,7 @@
                             <Grid>
 
                                 <Grid.Resources>
-                                    <Style TargetType="Label">
-                                        <Setter Property="TextColor" Value="{StaticResource YellowText}"/>
-                                        <Setter Property="FontFamily" Value="Runescape"/>
+                                    <Style TargetType="Label" BasedOn="{StaticResource Xamarin.Forms.Label}">
                                         <Setter Property="FontSize" Value="Large"/>
                                     </Style>
                                 </Grid.Resources>
