Added quick action menu

--- a/ProjectRune/ProjectRune/Pages/MainPage.xaml
+++ b/ProjectRune/ProjectRune/Pages/MainPage.xaml
@@ -5,18 +5,24 @@
              xmlns:views="clr-namespace:ProjectRune.Views"
              x:Class="ProjectRune.Pages.MainPage">
     <ContentPage.Content>
-        <Grid BackgroundColor="{StaticResource MidPrimary}">
+        <Grid BackgroundColor="{StaticResource MidPrimary}"
+              RowSpacing="0">
 
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <views:SkillsSummaryView VerticalOptions="Start"/>
+            <views:QuickActionView Grid.Row="0"/>
 
-            <views:InventoryView VerticalOptions="Start"/>
+            <views:SkillsSummaryView Grid.Row="1"
+                                     VerticalOptions="Start"/>
 
-            <views:QuickMenuView Grid.Row="1"/>
+            <views:InventoryView Grid.Row="1"
+                                 VerticalOptions="Start"/>
+
+            <views:QuickMenuView Grid.Row="2"/>
 
         </Grid>
     </ContentPage.Content>
